:wrench: Move settings of '.cspell.json' into '.vscode/settings.json'
Signed-off-by: kei-g <km.8k6ce+github@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
+  "cSpell.allowCompoundWords": true,
+  "cSpell.caseSensitive": false,
+  "cSpell.userWords": [
+    "buildx",
+    "dockerhub",
+    "snowstep",
+    "trixie",
+  ],
   "files.associations": {
     "**/LICENSE": "plaintext",
   },
