--- a/.github/workflows/check-updates.yml
+++ b/.github/workflows/check-updates.yml
@@ -189,6 +189,7 @@ jobs:
           tags: |
             type=raw,value=${{ matrix.distro }}-${{ steps.version.outputs.value }}-latest
             type=raw,value=${{ matrix.distro }}-${{ steps.version.outputs.value }}-${{ steps.datetime.outputs.value }}
+            type=raw,value=${{ matrix.codename }}
       - if: ${{ steps.datetime.outputs.value > 0 }}
         name: Run Buildx and Push it to DockerHub
         uses: docker/build-push-action@v6
