--- a/.github/workflows/check-updates.yml
+++ b/.github/workflows/check-updates.yml
@@ -146,34 +146,31 @@ jobs:
       - id: datetime
         name: Get datetime
         run: |
-          datetime=$(
-            jq -Mcr ".\"${{ steps.distro.outputs.long-name }}\"" \
-              << _EOT_
+          jq -Mcr '"value=\(.${{ steps.distro.outputs.long-name }})"' \
+            << _EOT_
           ${{ needs.apt-fast.outputs.datetimes }}
           _EOT_ \
-              || echo 0
-          )
-          echo value=$datetime >> $GITHUB_OUTPUT
+            >> $GITHUB_OUTPUT
         shell: bash
-      - if: ${{ steps.datetime.outputs.value > 0 }}
+      - if: ${{ steps.datetime.outputs.value != null }}
         name: Checkout
         uses: actions/checkout@v6
         with:
           fetch-depth: 1
-      - if: ${{ steps.datetime.outputs.value > 0 }}
+      - if: ${{ steps.datetime.outputs.value != null }}
         name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - if: ${{ steps.datetime.outputs.value > 0 }}
+      - if: ${{ steps.datetime.outputs.value != null }}
         name: Copy Dockerfile
         run: cp docker/linux/${{ matrix.codename }}/Dockerfile ./
-      - if: ${{ steps.datetime.outputs.value > 0 }}
+      - if: ${{ steps.datetime.outputs.value != null }}
         name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           username: ${{ vars.DOCKERHUB_USERNAME }}
       - id: metadata
-        if: ${{ steps.datetime.outputs.value > 0 }}
+        if: ${{ steps.datetime.outputs.value != null }}
         name: Decide tags
         uses: docker/metadata-action@v5
         with:
@@ -182,7 +179,7 @@ jobs:
             type=raw,value=${{ matrix.codename }}
             type=raw,value=${{ steps.distro.outputs.long-name }}-latest
             type=raw,value=${{ steps.distro.outputs.long-name }}-${{ steps.datetime.outputs.value }}
-      - if: ${{ steps.datetime.outputs.value > 0 }}
+      - if: ${{ steps.datetime.outputs.value != null }}
         name: Run Buildx and Push it to DockerHub
         uses: docker/build-push-action@v6
         with:
@@ -202,5 +199,5 @@ jobs:
 name: Check updates
 on:
   schedule:
-    - cron: '55 2,10,18 * * *'
+    - cron: "55 2,10,18 * * *"
   workflow_dispatch:
